changed file structure for codecademy routes

--- a/views/codecademy/Adoptly.ejs
+++ b/views/codecademy/Adoptly.ejs
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href='/stylesheets/Adoptly.css'>
+    <link rel="stylesheet" href='/stylesheets/codecademy/Adoptly.css'>
   </head>
   <body>
     <div class="header">
@@ -62,5 +63,11 @@
         </div>
       </div>
     </div>
+    
+    <!-- Latest compiled and minified JavaScript -->
+    <!--JQuery-->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <!--Bootstrap-->
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
