--- a/views/codecademy/Adoptly.ejs
+++ b/views/codecademy/Adoptly.ejs
@@ -1,53 +1,51 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title><%= title %></title>
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!--Custom CSS-->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href='/stylesheets/codecademy/Adoptly.css'>
+    <!-- Latest compiled and minified JavaScript -->
+    <!--JQuery-->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <!--Bootstrap-->
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src='/bower_components/angular/angular.min.js'></script>
   </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <ul class='nav nav-pills'>
-          <li class='active'><a href='#'>About</a></li>
-          <li><a href='#'>Animals</a></li>
-          <li><a href='#'>Adoptly</a></li>
-          <li><a href='#'>Blog</a></li>
-          <li><a href='#'>Events</a></li>
-        </ul>
+  <body ng-app="Adoptly">
+    <div id='navigation' class='nav-center'>
+      <div class="list-group">
+        <a id="About" href="#" class="list-group-item active">About</a>
+        <a id="Animals" href="#" class="list-group-item">Animals</a>
+        <a id="Adoptly" href="#" class="list-group-item">Adoptly</a>
+        <a id="Blog" href="#" class="list-group-item">Blog</a>
+        <a id="Events" href="#" class="list-group-item">Events</a>
       </div>
-    </div>
-
+    </div><!--End of navigation-->
     <div class="jumbotron">
       <div class="container">
         <h1>Meet your new best friend.</h1>
       </div>
     </div>
-
-    <div class="supporting">
-      <div class="container">
-        <div class='row'>
-          <div class='col-md-4'>
-            <h1 class='text-center'>Search</h1>
-            <p class='text-center'>Find a pet based on location, type, breed, age, and gender. We look through hundreds of shelters, agencies, and rescue sites.<p>
-            <a class='center-block btn btn-default btn-lg' href="#">Go</a>
-          </div>
-          <div class='col-md-4'>
-          	<h1 class='text-center'>Learn</h1>
-            <p class='text-center'>Read articles on feeding, training, grooming, and more. Our resources ensure that you are fully prepared as a new pet owner.<p>
-            <a class='center-block btn btn-default btn-lg' href="#">Go</a>
-          </div>
-          <div class='col-md-4'>
-          	<h1 class='text-center'>Help</h1>
-            <p class='text-center'>Get involved to help pets in need. You can make a difference through volunteering, social media, and donations.<p>
-            <a class='center-block btn btn-default btn-lg' href="#">Go</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    
+    <section>
+      <adoptly-About></adoptly-About>
+      
+    </section>
     <div class="footer">
       <div class="container">
         <div class='row'>
@@ -63,11 +61,11 @@
         </div>
       </div>
     </div>
-    
-    <!-- Latest compiled and minified JavaScript -->
-    <!--JQuery-->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <!--Bootstrap-->
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--Module-->
+    <script src="/ang.js"></script>
+    <!--Directives-->
+    <script src="/Directives/codecademy/adoptlyAbout.js"></script>
+    <!--Custom-->
+    <script src='/javascripts/codecademy/Adoptly.js'></script>
   </body>
 </html>
