--- a/views/codecademy/AirBnB.ejs
+++ b/views/codecademy/AirBnB.ejs
@@ -29,18 +29,22 @@
 
   <body>
     <div class="nav">
-      <div class="container">
-        <ul class='pull-left'>
-          <li><a href="#">Name</a></li>
-          <li><a href="#">Browse</a></li>
-        </ul>
-        <ul class='pull-right'>
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Log In</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-      </div>
-    </div>
+      <div class='row'>
+        <div class='col-xs-4 col-sm-4 col-md-3 col-lg-2'>
+          <ul>
+            <li><a href="#">Name</a></li>
+            <li><a href="#">Browse</a></li>
+          </ul>
+        </div><!--End of col-xs-8-->
+        <div class='col-xs-8 col-sm-5 col-sm-offset-3 col-md-4 col-md-offset-5 col-lg-3 col-lg-offset-7'>
+          <ul>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </div><!--End of col-xs-4-->
+      </div><!--End of row-->
+    </div><!--End of nav-->
 
     <div class="jumbotron">
       <div class="container">
