created angular armando complete

--- a/views/codecademy/Adoptly.ejs
+++ b/views/codecademy/Adoptly.ejs
@@ -27,7 +27,7 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
-  <body ng-app="Adoptly">
+  <body ng-app="codecademy">
     <div id='navigation' class='nav-center'>
       <div class="list-group">
         <a id="About" href="#" class="list-group-item active">About</a>
