finished BestBite site

--- a/views/codecademy/BestBite.ejs
+++ b/views/codecademy/BestBite.ejs
@@ -62,10 +62,18 @@
     
     <div class="section banner">
       <div class="container">
-        <h3 class='text-center'>Always have the answer to "What's for dinner?"</h3>
-        <a href="#"type='button' class='btn btn-large text-center'>Learn More</a>
-      </div>
-    </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <h3 class='text-center'>Always have the answer to "What's for dinner?"</h3>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+        <div class="row">
+          <div class='col-xs-12 text-center'>
+            <a href="#" type='button' class='btn btn-large'>Learn More</a>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-->
+    </div><!--End of section banner-->
 
     <div class="section">
       <div class="container">
@@ -74,21 +82,21 @@
       	</div>
         <div class='row'>
             <div id="menu" class='col-md-4'>
-              <ul>
+              <ul class='no-pad'>
                 <li class='text-center'>Breakfast</li>
                 <li class='text-center'>Maple French Toast</li>
                 <li class='text-center'>Rolled Oats with Berries</li>
               </ul>
             </div>
             <div id="menu" class='col-md-4'>
-              <ul>
+              <ul class='no-pad'>
                 <li class='text-center'>Dinner</li>
                 <li class='text-center'>Black Bean Stuffed Peppers</li>
                 <li class='text-center'>Pesto Pasta with Spinach</li>
               </ul>
             </div>
             <div id="menu" class='col-md-4'>
-              <ul>
+              <ul class='no-pad'>
                 <li class='text-center'>Dessert</li>
                 <li class='text-center'>German Choclate Cake</li>
                 <li class='text-center'>Hazelnut Tiramisu</li>
@@ -100,14 +108,14 @@
     <div class="footer">
       <div class="container">
         <div class='row'>
-          <div class='col-md-4'>
+          <div class='col-sm-4 '>
             <p class='text-center'>&copy; 2014 Best Bite</p>
           </div>
-          <div class='col-md-4'>
+          <div class='col-sm-4'>
             <p class='text-center'><a href="#">BestBite.com</a></p>
           </div>
-          <div class='col-md-4'>
-          	<p class='text-right'>12 Greentree Lane, Orlando, FL</p>
+          <div class='col-sm-4'>
+          	<p class='text-center'>12 Greentree Lane, Orlando, FL</p>
           </div>
         </div>
       </div>
