--- a/public/stylesheets/codecademy/BestBite.css
+++ b/public/stylesheets/codecademy/BestBite.css
@@ -1,3 +1,8 @@
+.no-pad{
+    margin:0px;
+    padding:0px;
+}
+
 .nav-pills li{
     border:1px solid red;
     border-radius:4px;
@@ -31,6 +36,43 @@
   background-image:url('https://s3.amazonaws.com/codecademy-content/projects/bestbite/bg.jpg');
   background-size:100% 400px;
   color:white;
+  margin:0px;
+}
+
+.banner {
+  background-color:#36343f;
+  height:180px; 
+  color: #fff;
+}
+
+.banner a{
+  text-decoration:none;
+  color:white;
+	background-color:rgba(216, 25, 47, .5);
+  margin-top:15px;
+}
+
+#menu ul{
+	list-style:none;
+	margin-bottom: 12px;
+}
+
+#menu li{
+	text-decoration:none;
+}
+
+#menu li:first-child{
+	color:red;
+  padding-bottom:10px;
+}
+
+.footer{
+	background-color:#eeeeee;
+  padding:30px 0px;
+}
+
+.footer a{
+	color:red;
 }
 
 @media (min-width: 426px) {
