finished move site

--- a/views/codecademy/Junction.ejs
+++ b/views/codecademy/Junction.ejs
@@ -17,6 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--Custom CSS-->
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href='/stylesheets/codecademy/Junction.css'>
     <!-- Latest compiled and minified JavaScript -->
     <!--JQuery-->
