--- a/views/codecademy/Newsroom.ejs
+++ b/views/codecademy/Newsroom.ejs
@@ -89,9 +89,9 @@
     <div class='supporting'>
         <div class='container'>
             <div class='row'>
-                <div class='col-xs-12'>
+                <div class='col-xs-12 col-sm-7 no-pad'>
                     <div class='latest'>
-                        <ul class='no-pad'>
+                        <ul class='list-unstyled'>
                             <li>Latest News</li>
                             <li>November 5, 2014</li>
                             <li>Move Launches in London</li>
@@ -102,9 +102,9 @@
                         </ul>
                     </div>
                 </div><!--End of col-xs-7-->
-                <div class='col-xs-12'>
+                <div class='col-xs-12 col-sm-5 no-pad'>
                     <div class='upcoming'>
-                        <ul class='no-pad'>
+                        <ul class='list-unstyled'>
                             <li>Upcoming Events</li>
                             <li>November 8-12,2014</li>
                             <li>Innovation Cloud 2014</li>
@@ -117,11 +117,27 @@
                 </div><!--End of col-xs-5-->
             </div><!--End of row-->
             <div class='row'>
-                <div class='col-xs-12'>
+                <div class='col-xs-12 no-pad'>
                     <img id='banner' src='https://s3.amazonaws.com/codecademy-content/projects/newsroom/ad.jpg'/>
                 </div><!--End of col-xs-12-->
             </div><!--End of row-->
         </div><!--End of container-->
     </div><!--End of supporting-->
+    <div class='footer'>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-xs-8'>
+                   <ul class='no-pad list-unstyled list-inline'>
+                    <li><a href='#'>About</a></li>
+                    <li><a href='#'>Terms</a></li>
+                    <li><a href='#'>Send Feedback</a></li>
+                   </ul> 
+                </div><!--End of col-xs-8-->
+                <div class='col-xs-4'>
+                   <p class='pull-right'>©2014 Newsroom</p> 
+                </div><!--End of col-xs-4-->
+            </div><!--End of row-->
+        </div><!--End of container-->
+    </div><!--End of footer-->
   </body>
 </html>
