--- a/public/stylesheets/codecademy/Newsroom.css
+++ b/public/stylesheets/codecademy/Newsroom.css
@@ -75,7 +75,7 @@ input[type=search]:hover{
   margin:0px;
 }
 
-.supporting{
+.feature{
     background-color:gray;
     padding:20px 0px 10px 0px;
 }
@@ -84,34 +84,28 @@ input[type=search]:hover{
     background-color:white;
 }
 
-.latest, .upcoming{
-    padding:10px 0px 10px 0px;
-}
-
-.latest ul, .upcoming ul{
-    margin:0px;
-    padding:0px 6px 0px 6px;
-}
-
-.latest ul li, .upcoming ul li{
-    padding-right:0px;
-}
-
-.latest ul li:first-child, .upcoming ul li:first-child{
-    font-size:1.85em;
-    font-weight:bold;
-    padding:0px 0px 12px 0px;
-}
-
-.latest ul li:nth-child(2n+3), .upcoming ul li:nth-child(2n+3){
-    font-size:1.45em;
-    font-weight: bold;
-    text-decoration:underline;
-}
-
 .upcoming{
     background-color:rgb(15, 70, 79);
     color:white;
+}
+
+.latest h1, .upcoming h1{
+    margin:2px 6px;    
+}
+
+.date{
+  margin:2px 6px  
+}
+
+.title{
+    margin:2px 6px;
+    font-size:1.5em;
+    text-decoration:underline;
+}
+
+.supporting{
+    background-color:gray;
+    padding:20px 0px 10px 0px;
 }
 
 #banner{
@@ -145,6 +139,14 @@ input[type=search]:hover{
 
     .navbar .navbar-collapse {
         text-align: center;
+    }
+    
+    .no-right{
+    padding-right:0px;
+    }
+
+    .no-left{
+        padding-left:0px;    
     }
 }
 
