--- a/views/codecademy/Newsroom.ejs
+++ b/views/codecademy/Newsroom.ejs
@@ -25,7 +25,7 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
-  <body>
+  <body ng-app='codecademy'>
     <div class='header'>
         <div class='container'>
             <div class='row'>
@@ -76,7 +76,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="jumbotron">
-      <div class="container">
+      <div class="container-fluid">
         <div class='row'>
             <div class='col-xs-12'>
                 <p>November 7,2014</p>
@@ -86,36 +86,42 @@
         </div><!--End of row-->
       </div><!--End of container-->
     </div><!--End of jumbotron-->
-    <div class='supporting'>
-        <div class='container'>
+    <div class='feature' ng-controller='newsRoomController'>
+        <div class='container-fluid'>
             <div class='row'>
-                <div class='col-xs-12 col-sm-7 no-pad'>
+                <div class='col-xs-12 col-sm-7 no-right'>
                     <div class='latest'>
-                        <ul class='list-unstyled'>
-                            <li>Latest News</li>
-                            <li>November 5, 2014</li>
-                            <li>Move Launches in London</li>
-                            <li>November 5, 2014</li>
-                            <li>Introducing Excursion</li>
-                            <li>November 5, 2014</li>
-                            <li>Improvements to Shutterbugg arrive</li>
-                        </ul>
-                    </div>
-                </div><!--End of col-xs-7-->
-                <div class='col-xs-12 col-sm-5 no-pad'>
+                        <div class='row'>
+                            <div class='col-xs-12'>
+                                <h1>Latest News</h1>
+                            </div><!--End of col-xs-12-->
+                        </div><!--End of row-->
+                        <div class='row'>
+                            <div class='col-xs-12' ng-repeat='article in articles'>
+                                <news-Room listing='article'></news-Room>
+                            </div><!--End of col-xs-12-->
+                        </div><!--End of row-->
+                    </div><!--End of latest-->
+                </div><!--End of col-xs-12--> 
+                <div class='col-xs-12 col-sm-5 no-left'>
                     <div class='upcoming'>
-                        <ul class='list-unstyled'>
-                            <li>Upcoming Events</li>
-                            <li>November 8-12,2014</li>
-                            <li>Innovation Cloud 2014</li>
-                            <li>November 21,2014</li>
-                            <li>LL Retrospective</li>
-                            <li>December 5,2014</li>
-                            <li>M.O.N.E.Y. Launch Event</li>
-                        </ul>
+                        <div class='row'>
+                            <div class='col-xs-12'>
+                                <h1>Upcoming Events</h1>
+                            </div><!--End of col-xs-12-->
+                        </div><!--End of row-->
+                        <div class='row'>
+                            <div class='col-xs-12' ng-repeat='event in events'>
+                                <news-Room listing='event'></news-Room>
+                            </div><!--End of col-xs-12-->
+                        </div><!--End of row-->
                     </div><!--End of upcoming-->
-                </div><!--End of col-xs-5-->
+                </div><!--End of col-xs-12-->
             </div><!--End of row-->
+        </div><!--End of container-->
+    </div><!--End of feature-->
+    <div class='supporting'>
+        <div class='container-fluid'>
             <div class='row'>
                 <div class='col-xs-12 no-pad'>
                     <img id='banner' src='https://s3.amazonaws.com/codecademy-content/projects/newsroom/ad.jpg'/>
@@ -124,7 +130,7 @@
         </div><!--End of container-->
     </div><!--End of supporting-->
     <div class='footer'>
-        <div class='container'>
+        <div class='container-fluid'>
             <div class='row'>
                 <div class='col-xs-8'>
                    <ul class='no-pad list-unstyled list-inline'>
@@ -139,5 +145,11 @@
             </div><!--End of row-->
         </div><!--End of container-->
     </div><!--End of footer-->
+    <!--Module-->
+    <script src="/ang.js"></script>
+    <!--Controller-->
+    <script src='/Controllers/codecademy/newsRoomController.js'></script>
+    <!--Directives-->
+    <script src='/Directives/codecademy/newsRoom.js'></script>
   </body>
 </html>
