--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!--Font Awesome-->
+    <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!--Custom CSS-->
+    <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href='/stylesheets/style.css'>
+    <!-- Latest compiled and minified JavaScript -->
+    <!--JQuery-->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <!--Bootstrap-->
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src='/bower_components/angular/angular.min.js'></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class='header'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-xs-12 text-center'>
+            <h1>Rawle Juglal</h1>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-->
+    </div><!--End of header-->
+    <div class='main'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-xs-12 text-center'>
+            <a class="btn btn-lg btn-default btn-index" href="#" role="button">View Work</a>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-->
+    </div><!--End of main-->
+    <div class='feature'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-xs-12'>
+            <h2 class='text-center'>Web Developer</h2>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+        <div class='row'>
+          <div class='col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3'>
+            <blockquote>
+              <p>Nothing ever comes to one, that is worth having, except as a result of hard work.</p>
+              <footer>Booker T. Washington</footer>
+            </blockquote>
+          </div><!--End of col-xs-12-->
+        </div><!--End of col-xs-12-->
+      </div><!--End of container-->
+    </div><!--End of feature-->
+    <div class='footer'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-xs-12 text-center'>
+            <ul class='list-unstyled list-inline'>
+              <li><a href="https://www.linkedin.com/in/rawle-juglal-b3783b10"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/RawleJuglal/rawlejuglal.me"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="mailto:rawledjuglal@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/therawle"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://twitter.com/TheRawle"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+            </ul>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-->
+    </div><!--End of footer-->
+    <!--Custom-->
+    <script src='/javascripts/coverPage.js'></script>
   </body>
 </html>
