solving index image issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   margin:0px;
   padding:0px;
-  background:url(https://rawlejuglal-me-rawlejuglal-1.c9users.io/images/workspaceEdit.jpg) no-repeat center center fixed; 
+  background:url(http://fathomless-ocean-13062.herokuapp.com/images/workspaceEdit.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
