unfinished portfolio site

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!--Font Awesome-->
+    <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -16,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--Custom CSS-->
-    <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <link  href="https://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href='/stylesheets/portfolio.css'>
     <!-- Latest compiled and minified JavaScript -->
     <!--JQuery-->
@@ -26,7 +28,87 @@
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+      <div class='header'>
+          <div class='container-fluid'>
+              <div class='row'>
+                  <div class='col-xs-12'>
+                      
+                  </div><!--End of col-xs-12-->
+              </div><!--End of row-->
+          </div><!--End of container-fluid-->
+      </div><!--End of header-->
+      <div class='projects'>
+          <div class='container-fluid'>
+              <div class='row'>
+                  <div class='col-xs-12'>
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <h2>Title #1</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #2</h2>
+                          <p>Text Content #2</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #3</h2>
+                          <p>Text Content #3</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #4</h2>
+                          <p>Text Content #4</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #5</h2>
+                          <p>Text Content #5</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #6</h2>
+                          <p>Text Content #6</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #7</h2>
+                          <p>Text Content #7</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #8</h2>
+                          <p>Text Content #8</p>
+                        </a>
+                      </li>
+                    </ul>  
+                  </div><!--End of col-xs-12-->
+              </div><!--End of row-->
+          </div><!--End of container-->
+      </div><!--End of projects-->
+      <div class='footer'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-xs-12 text-center'>
+            <ul class='list-unstyled list-inline'>
+              <li><a href="https://www.linkedin.com/in/rawle-juglal-b3783b10"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/RawleJuglal/rawlejuglal.me"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="mailto:rawledjuglal@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/therawle"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://twitter.com/TheRawle"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+            </ul>
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-->
+    </div><!--End of footer-->
   </body>
 </html>
