--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--Custom CSS-->
-    <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Peralta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href='/stylesheets/style.css'>
     <!-- Latest compiled and minified JavaScript -->
     <!--JQuery-->
