--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,12 @@
 body {
   margin:0px;
   padding:0px;
-  background:url(http://fathomless-ocean-13062.herokuapp.com/images/workspaceEdit.jpg) no-repeat center center fixed; 
+  background:url(https://fathomless-ocean-13062.herokuapp.com/images/workspaceEdit.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: 'Yellowtail', cursive;
+  font-family: 'Peralta', cursive; 
 }
 
 blockquote{
