testing domain name

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -45,21 +45,21 @@
                   <div class='col-xs-12'>
                     <ul>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Shutterbugg">
+                        <a href="rawlejuglal.me/codecademy/Shutterbugg">
                           <h2 class='text-center'>Shutterbugg</h2>
                           <p class='text-center'><i class="fa fa-bug fa-2x" aria-hidden="true"></i></p>
                           <p>Capture the moments that matter</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/RedEyePhotography">
+                        <a href="http://fathomless-ocean-13062.herokuapp.com/codecademy/RedEyePhotography">
                           <h2 class='text-center'>Red Eye Photography</h2>
                           <p class='text-center'><i class="fa fa-eye fa-3x" aria-hidden="true"></i></p>
                           <p>Photography by Matthew Wiebe</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Pocketbook">
+                        <a href="http://fathomless-ocean-13062.herokuapp.com/codecademy/Pocketbook">
                           <h2 class='text-center'>Pocketbook</h2>
                           <p class='text-center'><i class="fa fa-book fa-4x" aria-hidden="true"></i></p>
                           <p>Ditch the pen & paper</p>
