--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -45,7 +45,7 @@
                   <div class='col-xs-12'>
                     <ul>
                       <li>
-                        <a href="rawlejuglal.me/codecademy/Shutterbugg">
+                        <a href="https://rawlejuglal.me/codecademy/Shutterbugg">
                           <h2 class='text-center'>Shutterbugg</h2>
                           <p class='text-center'><i class="fa fa-bug fa-2x" aria-hidden="true"></i></p>
                           <p>Capture the moments that matter</p>
