fouth domain attempt

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
       <div class='container'>
         <div class='row'>
           <div class='col-xs-12 text-center'>
-            <a class="btn btn-lg btn-default btn-index" href="http://fathomless-ocean-13062.herokuapp.com/Portfolio" role="button">View Work</a>
+            <a class="btn btn-lg btn-default btn-index" href="Portfolio" role="button">View Work</a>
           </div><!--End of col-xs-12-->
         </div><!--End of row-->
       </div><!--End of container-->
