--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -52,105 +52,105 @@
                         </a>
                       </li>
                       <li>
-                        <a href="http://fathomless-ocean-13062.herokuapp.com/codecademy/RedEyePhotography">
+                        <a href="codecademy/RedEyePhotography">
                           <h2 class='text-center'>Red Eye Photography</h2>
                           <p class='text-center'><i class="fa fa-eye fa-3x" aria-hidden="true"></i></p>
                           <p>Photography by Matthew Wiebe</p>
                         </a>
                       </li>
                       <li>
-                        <a href="http://fathomless-ocean-13062.herokuapp.com/codecademy/Pocketbook">
+                        <a href="codecademy/Pocketbook">
                           <h2 class='text-center'>Pocketbook</h2>
                           <p class='text-center'><i class="fa fa-book fa-4x" aria-hidden="true"></i></p>
                           <p>Ditch the pen & paper</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Newsroom">
+                        <a href="codecademy/Newsroom">
                           <h2 class='text-center'>Newsroom</h2>
                           <p class='text-center'><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i></p>
                           <p>Real news, real time</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Move">
+                        <a href="codecademy/Move">
                           <h2 class='text-center'>Move</h2>
                           <p class='text-center'><i class="fa fa-arrows fa-2x" aria-hidden="true"></i></p>
                           <p>Form healthy habits to take your fitness to the next level</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Junction">
+                        <a href="codecademy/Junction">
                           <h2 class='text-center'>Junction</h2>
                           <p class='text-center'><i class="fa fa-rss fa-4x" aria-hidden="true"></i></p>
                           <p>Reading is more social than you think</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Innovation">
+                        <a href="codecademy/Innovation">
                           <h2 class='text-center'>Innovation</h2>
                           <p class='text-center'><i class="fa fa-lightbulb-o fa-3x" aria-hidden="true"></i></p>
                           <p>Connect your ideas globally</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Headlines">
+                        <a href="codecademy/Headlines">
                           <h2 class='text-center'>Headlines</h2>
                           <p class='text-center'><i class="fa fa-header fa-3x" aria-hidden="true"></i></p>
                           <p>News that's relevant to you</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Excursion">
+                        <a href="codecademy/Excursion">
                           <h2 class='text-center'>Excursion</h2>
                           <p class='text-center'><i class="fa fa-globe fa-2x" aria-hidden="true"></i></p>
                           <p>Discover the hidden places in the world around you</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Broadway">
+                        <a href="codecademy/Broadway">
                           <h2 class='text-center'>Broadway</h2>
                           <p class='text-center'><i class="fa fa-ticket fa-5x" aria-hidden="true"></i></p>
                           <p>Simple as 1-2-3</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Bolt">
+                        <a href="codecademy/Bolt">
                           <h2 class='text-center'>Bolt</h2>
                           <p class='text-center'><i class="fa fa-bolt fa-3x" aria-hidden="true"></i></p>
                           <p>A world of movies at your fingertips</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/BestBite">
+                        <a href="codecademy/BestBite">
                           <h2 class='text-center'>Best Bite</h2>
                           <p class='text-center'><i class="fa fa-cutlery fa-2x" aria-hidden="true"></i></p>
                           <p>Always have the answer to "what's for dinner"</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Bass">
+                        <a href="codecademy/Bass">
                           <h2 class='text-center'>Bass</h2>
                           <p class='text-center'><i class="fa fa-music fa-5x" aria-hidden="true"></i></p>
                           <p>Turn up the bass</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Armando">
+                        <a href="codecademy/Armando">
                           <h2 class='text-center'>Armando</h2>
                           <p class='text-center'><i class="fa fa-camera-retro fa-4x" aria-hidden="true"></i></p>
                           <p>My own lens</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/AirBnB">
+                        <a href="codecademy/AirBnB">
                           <h2 class='text-center'>Airbnb</h2>
                           <p class='text-center'><i class="fa fa-home fa-3x" aria-hidden="true"></i></p>
                           <p>A place like home</p>
                         </a>
                       </li>
                       <li>
-                        <a href="https://rawlejuglal-me-rawlejuglal-1.c9users.io/codecademy/Adoptly">
+                        <a href="codecademy/Adoptly">
                           <h2 class='text-center'>Adoptly</h2>
                           <p class='text-center'><i class="fa fa-paw fa-4x" aria-hidden="true"></i></p>
                           <p>Meet your new best friend</p>
