--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -43,119 +43,14 @@
           <div class='container-fluid'>
               <div class='row'>
                   <div class='col-xs-12'>
-                    <ul ng-repeat='note in notes'>
-                      <li>
+                    <ul>
+                      <li ng-repeat='note in notes'>
                         <a href="{{note.url}}">
                           <h2 class='text-center'>{{note.title}}</h2>
                           <p class='text-center'><i class="fa{{note.faImg}}{{note.faSize}}" aria-hidden="true"></i></p>
                           <p>{{note.desc}}</p>
                         </a>
                       </li>
-                      <!--<li>
-                        <a href="codecademy/RedEyePhotography">
-                          <h2 class='text-center'>Red Eye Photography</h2>
-                          <p class='text-center'><i class="fa fa-eye fa-3x" aria-hidden="true"></i></p>
-                          <p>Photography by Matthew Wiebe</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Pocketbook">
-                          <h2 class='text-center'>Pocketbook</h2>
-                          <p class='text-center'><i class="fa fa-book fa-4x" aria-hidden="true"></i></p>
-                          <p>Ditch the pen & paper</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Newsroom">
-                          <h2 class='text-center'>Newsroom</h2>
-                          <p class='text-center'><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i></p>
-                          <p>Real news, real time</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Move">
-                          <h2 class='text-center'>Move</h2>
-                          <p class='text-center'><i class="fa fa-arrows fa-2x" aria-hidden="true"></i></p>
-                          <p>Form healthy habits to take your fitness to the next level</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Junction">
-                          <h2 class='text-center'>Junction</h2>
-                          <p class='text-center'><i class="fa fa-rss fa-4x" aria-hidden="true"></i></p>
-                          <p>Reading is more social than you think</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Innovation">
-                          <h2 class='text-center'>Innovation</h2>
-                          <p class='text-center'><i class="fa fa-lightbulb-o fa-3x" aria-hidden="true"></i></p>
-                          <p>Connect your ideas globally</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Headlines">
-                          <h2 class='text-center'>Headlines</h2>
-                          <p class='text-center'><i class="fa fa-header fa-3x" aria-hidden="true"></i></p>
-                          <p>News that's relevant to you</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Excursion">
-                          <h2 class='text-center'>Excursion</h2>
-                          <p class='text-center'><i class="fa fa-globe fa-2x" aria-hidden="true"></i></p>
-                          <p>Discover the hidden places in the world around you</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Broadway">
-                          <h2 class='text-center'>Broadway</h2>
-                          <p class='text-center'><i class="fa fa-ticket fa-5x" aria-hidden="true"></i></p>
-                          <p>Simple as 1-2-3</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Bolt">
-                          <h2 class='text-center'>Bolt</h2>
-                          <p class='text-center'><i class="fa fa-bolt fa-3x" aria-hidden="true"></i></p>
-                          <p>A world of movies at your fingertips</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/BestBite">
-                          <h2 class='text-center'>Best Bite</h2>
-                          <p class='text-center'><i class="fa fa-cutlery fa-2x" aria-hidden="true"></i></p>
-                          <p>Always have the answer to "what's for dinner"</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Bass">
-                          <h2 class='text-center'>Bass</h2>
-                          <p class='text-center'><i class="fa fa-music fa-5x" aria-hidden="true"></i></p>
-                          <p>Turn up the bass</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Armando">
-                          <h2 class='text-center'>Armando</h2>
-                          <p class='text-center'><i class="fa fa-camera-retro fa-4x" aria-hidden="true"></i></p>
-                          <p>My own lens</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/AirBnB">
-                          <h2 class='text-center'>Airbnb</h2>
-                          <p class='text-center'><i class="fa fa-home fa-3x" aria-hidden="true"></i></p>
-                          <p>A place like home</p>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="codecademy/Adoptly">
-                          <h2 class='text-center'>Adoptly</h2>
-                          <p class='text-center'><i class="fa fa-paw fa-4x" aria-hidden="true"></i></p>
-                          <p>Meet your new best friend</p>
-                        </a>
-                      </li>-->
                     </ul>  
                   </div><!--End of col-xs-12-->
               </div><!--End of row-->
@@ -177,7 +72,7 @@
       </div><!--End of container-->
     </div><!--End of footer-->
     <!--Module-->
-    <script src="/ang.js"></script>
+    <script src="/rawleAng.js"></script>
     <!--Controller-->
     <script src='/Controllers/rawleController.js'></script>
   </body>
