added max height media query to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,26 +28,18 @@
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
   <body>
-    <div class='header'>
+    <div class='main'>
       <div class='container'>
         <div class='row'>
           <div class='col-xs-12 text-center'>
             <h1>Rawle Juglal</h1>
           </div><!--End of col-xs-12-->
         </div><!--End of row-->
-      </div><!--End of container-->
-    </div><!--End of header-->
-    <div class='main'>
-      <div class='container'>
         <div class='row'>
           <div class='col-xs-12 text-center'>
             <a class="btn btn-lg btn-default btn-index" href="Portfolio" role="button">View Work</a>
           </div><!--End of col-xs-12-->
         </div><!--End of row-->
-      </div><!--End of container-->
-    </div><!--End of main-->
-    <div class='feature'>
-      <div class='container'>
         <div class='row'>
           <div class='col-xs-12'>
             <h2 class='text-center'>Web Developer</h2>
@@ -60,9 +52,9 @@
               <footer>Booker T. Washington</footer>
             </blockquote>
           </div><!--End of col-xs-12-->
-        </div><!--End of col-xs-12-->
+        </div><!--End of row-->
       </div><!--End of container-->
-    </div><!--End of feature-->
+    </div><!--End of main-->
     <div class='footer'>
       <div class='container'>
         <div class='row'>
@@ -79,6 +71,6 @@
       </div><!--End of container-->
     </div><!--End of footer-->
     <!--Custom-->
-    <script src='/javascripts/coverPage.js'></script>
+    <script src='javascripts/coverPage.js'></script>
   </body>
 </html>
