--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ blockquote{
   border-left:5px solid rgba( 0, 195, 229, 1);  
 }
 
-.header h1{
+.main h1{
   font-size:1.25em;  
 }
 
@@ -46,15 +46,20 @@ a:hover{
     transition:color .1s;
 }
 
-
 @media (min-width: 425px) {
-  .header h1{
+  .main h1{
     font-size:2.5em;
   }
 }
 
 @media (min-width: 768px) {
-  .header h1{
+  .main h1{
     font-size:5em;
   }
+}
+
+@media (max-height: 440px){
+    .main h1{
+      font-size:1.25em;
+    }
 }
