ashift site ng-click still needs work

--- a/public/stylesheets/codecademy/ArticleShift.css
+++ b/public/stylesheets/codecademy/ArticleShift.css
@@ -6,10 +6,22 @@ body {
           background-size: cover;
 }
 
+.panel-articleShift{
+  margin-top:100px;  
+}
+
 .panel-articleShift .panel+.panel{
   margin:0px;
 }
 
 .panel-articleShift .panel{
   border-radius:0px;
+}
+
+.panel-default>.panel-heading, .panel-body{
+    background-color:rgba(206,220,206,.9);
+}
+
+.active{
+  background-color:rgba(143,168,143,.9);
 }
