--- a/views/codecademy/ArticleShift.ejs
+++ b/views/codecademy/ArticleShift.ejs
@@ -29,23 +29,23 @@
       <div class='container'>
         <div class="panel-group panel-articleShift" id="accordion" role="tablist" aria-multiselectable="true" ng-controller="ashiftController">
           <div class="panel panel-default panel-ashift" ng-repeat="article in articles">
-            <div class="panel-heading" role="tab" id="{{article.headingID}}" ng-click='updateCurrent({{article.headingID}})'>
-              <h4 class="panel-title">
-                <a  class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="{{article.headingHREF}}" aria-expanded="false" aria-controls="{{article.headingControls}}">
-                  <div class="item row">
-                    <div class="col-xs-5 col-sm-4 col-md-3 col-lg-2">
-                      <p class="source">{{article.headingSource}}</p>
+              <a  class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="{{article.headingHREF}}" aria-expanded="false" aria-controls="{{article.headingControls}}">
+                <div class="panel-heading" role="tab" id="{{article.headingID}}" ng-click='updateClass(article.headingID)'>
+                  <h4 class="panel-title">
+                    <div class="item row">
+                      <div class="col-xs-5 col-sm-4 col-md-3 col-lg-2">
+                        <p class="source">{{article.headingSource}}</p>
+                      </div>
+                      <div class="col-xs-4 col-sm-5 col-md-6 col-lg-8">
+                        <p class="title">{{article.title}}</p>
+                      </div>
+                      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-2">
+                        <p class="pubdate">{{article.pubdate}}</p>
+                      </div>
                     </div>
-                    <div class="col-xs-4 col-sm-5 col-md-6 col-lg-8">
-                      <p class="title">{{article.title}}</p>
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-2">
-                      <p class="pubdate">{{article.pubdate}}</p>
-                    </div>
-                  </div>
-                </a>
-              </h4>
-            </div>
+                  </h4>
+                </div>
+              </a>
             <div id="{{article.headingControls}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="{{article.headingID}}">
               <div class="panel-body">
                 <div class="description row">
