feature(rawlejuglal.me):added pomodoroClock site:needs audio test for possible bug

--- a/views/freecodecamp/Weather.ejs
+++ b/views/freecodecamp/Weather.ejs
@@ -26,7 +26,8 @@
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
   <body>
-
+    <h1>Local Weather App</h1>
+    <p>This is currently broken because cannot use open weather map api without SSL certificate.</p>
     <!--Custom-->
     <script src='/javascripts/freecodecamp/weather.js'></script>
   </body>
